faet (login): implement login. add/enhance employee creation form

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="Admin panel by Azeek" />
+    <meta name="description" content="Abdulaziz askaraliev" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>Vite + React + TS</title>
+    <title>Admin</title>
   </head>
   <body>
     <div id="root"></div>
